# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.979 2009-08-31 14:09:45 mb Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

2.4.4 (2009/08/31)
 - (2009/08/31) Fixed Android browser support.
 - (2009/08/31) Added SOAP::Lite, which is needed for the XML-RPC Interface,
    to otrs/bin/otrs.checkModules.
 - (2009/08/29) Fixed bug#4018 - CustomerCompany in ModuleAction section while
    CustomerUser in Module section.
 - (2009/08/28) Fixed bug#4159 - Text Editor does not work with Konqueror.
 - (2009/08/28) Fixed bug#4117 - UPGRADING: SetPermission.sh has to be run
    before the update script is started.
 - (2009/08/28) Fixed bug#1917 - Wrong Content-Type in downloaded message
    from ArticlePlain.
 - (2009/08/28) Fixed wrong quoting in links in AgentTicketZoom.dtl and
    CustomerTicketZoom.dtl.
 - (2009/08/28) Fixed bug#4203 - No German translation for "My Locked Tickets".
 - (2009/08/28) Fixed bug#1245 - Queues and responses are sorted descending
    instead of ascending in AdminQueueResponses.
 - (2009/08/27) Fixed bug#4198 - Error with services with one bracket in the
    name.
 - (2009/08/27) Fixed bug#4085 - The UPGRADING document is incorrect and
    misleading.
 - (2009/08/27) Fixed bug#2768 - AttachmentsContent-Disposition header
    downloading a with non-ASCII filename.
 - (2009/08/27) Fixed bug#3974 - Missing template stats in the 2.4.0 beta 5.
 - (2009/08/27) Fixed bug#3297 - Disabling of AgentTicketMerge does not remove
    merge link.
 - (2009/08/26) Fixed bug#3746 - Show expiration date for PGP or S/MIME keys.
 - (2009/08/25) Fixed bug#2676 - Translation issue for May.
 - (2009/08/26) Fixed bug#4122 - META: spell checker issues with Rich Text
    Editor.