@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.979 2009-08-31 14:09:45 mb Exp $
+# $Id: CHANGES,v 1.980 2009-08-31 16:32:11 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,8 @@
 # --
 
 2.4.4 (2009/08/31)
+ - (2009/08/31) Fixed bug#4105 - CustomerUser has access to other Customers
+    tickets than defined in CustomerIDs.
  - (2009/08/31) Fixed Android browser support.
  - (2009/08/31) Added SOAP::Lite, which is needed for the XML-RPC Interface,
     to otrs/bin/otrs.checkModules.
